# MessengerAPI

./: Dockerfile  Pipfile  README.md  create_db.py  docker-compose.yml  pyproject.toml
api/: Message.py  MessageQuery.py  app.py
app/: MessageQuery.py  main.py
db/: message_db.py
