[tool.poetry]
name = "MessengerAPI"
version = "0.1.0"
description = "Uvicorn FastAPI Messenger API"
authors = ["Travis Rivers <trivers@contractor.usgs.gov>"]

[tool.poetry.dependencies]
python = "^3.7"
uvicorn = "^0.12.2"
fastapi = "^0.61.1"
pydantic = "^1.7.2"
rethinkdb = "^2.4.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
